<resources>
    <string name="app_name">Pursuit</string>
    <string name="strUsername">Username</string>
    <string name="strPassword">Password</string>
    <string name="strLogin">Login</string>
    <string name="strRegister">Register</string>
    <string name="strEmail">Email</string>
    <string name="strReEnterPassword">Re-enter password</string>
    <string name="strApplicant">Applicant</string>
    <string name="strCompany">Company</string>
    <string name="strContinue">Continue</string>
    <string name="strRole">Role</string>
    <string name="strStudent">Student</string>
    <string name="strIamA">I am A</string>
    <string name="strFirstName">First Name</string>
    <string name="strLastName">Last Name</string>
    <string name="strUniversity">University</string>
    <string name="strMajors">Major(s)</string>
    <string name="strMinors">Minor(s)/Concentration(s)</string>
    <string name="strGPA">GPA</string>
    <string name="strBio">Bio</string>
    <string name="strFinish">Finish</string>
    <string name="strFieldOfBusiness">Field of Business</string>
    <string name="strUsernameEmail">Username/Email</string>
    <string name="strCompanyDescription">Company Description</string>
    <string name="strCompanyName">Company Name</string>
    <string name="txtUniversityColon">University: </string>
    <string name="txtMajorColon">Major: </string>
    <string name="txtMinorColon">Minor: </string>
    <string name="txtGPAColon">GPA: </string>
    <string name="txtEditProfile">Edit Profile</string>
    <string name="strCompanyEmail">Company Email</string>
    <string name="strInviteEmployee">Invite Employee</string>
    <string name="strEmployeeEmail">Employee Email</string>
    <string name="strCreateInviteCode">Create Invite Code</string>
    <string name="profile_photo">Profile Photo</string>
    <string name="message_activity_title">Messaging</string>
    <string name="conversation_title_placeholder">Employee: Ben</string>
    <string name="conversation_date_placeholder">12/28/1997</string>
    <string name="new_conversation_button">Start a Conversation</string>
    <string name="confirm_delete_conversation">Are you sure you want to delete this conversation?</string>
    <string name="create_string">Create</string>
    <string name="strViewInvites">View Invites</string>
    <string name="strEmployee">Employee</string>
    <string name="strCompanyCode">Company Code</string>
    <string name="strInvitationCode">Invitation Code</string>
    <string name="strPosition">Position</string>
    <string name="strDelete">Delete</string>
    <string name="title_activity_messages">MessagesActivity</string>
    <string name="large_text">
        "Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"

        "Bold, graphic, intentional.\n\n"

        "The foundational elements of print based design typography, grids, space, scale, color, "
        "and use of imagery guide visual treatments. These elements do far more than please the "
        "eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
        "imagery, large scale typography, and intentional white space create a bold and graphic "
        "interface that immerse the user in the experience.\n"
        "An emphasis on user actions makes core functionality immediately apparent and provides "
        "waypoints for the user.\n\n"

        "Motion provides meaning.\n\n"

        "Motion respects and reinforces the user as the prime mover. Primary user actions are "
        "inflection points that initiate motion, transforming the whole design.\n"
        "All action takes place in a single environment. Objects are presented to the user without "
        "breaking the continuity of experience even as they transform and reorganize.\n"
        "Motion is meaningful and appropriate, serving to focus attention and maintain continuity. "
        "Feedback is subtle yet clear. Transitions are efﬁcient yet coherent.\n\n"

        "3D world.\n\n"

        "The material environment is a 3D space, which means all objects have x, y, and z "
        "dimensions. The z-axis is perpendicularly aligned to the plane of the display, with the "
        "positive z-axis extending towards the viewer. Every sheet of material occupies a single "
        "position along the z-axis and has a standard 1dp thickness.\n"
        "On the web, the z-axis is used for layering and not for perspective. The 3D world is "
        "emulated by manipulating the y-axis.\n\n"

        "Light and shadow.\n\n"

        "Within the material environment, virtual lights illuminate the scene. Key lights create "
        "directional shadows, while ambient light creates soft shadows from all angles.\n"
        "Shadows in the material environment are cast by these two light sources. In Android "
        "development, shadows occur when light sources are blocked by sheets of material at "
        "various positions along the z-axis. On the web, shadows are depicted by manipulating the "
        "y-axis only. The following example shows the card with a height of 6dp.\n\n"

        "Resting elevation.\n\n"

        "All material objects, regardless of size, have a resting elevation, or default elevation "
        "that does not change. If an object changes elevation, it should return to its resting "
        "elevation as soon as possible.\n\n"

        "Component elevations.\n\n"

        "The resting elevation for a component type is consistent across apps (e.g., FAB elevation "
        "does not vary from 6dp in one app to 16dp in another app).\n"
        "Components may have different resting elevations across platforms, depending on the depth "
        "of the environment (e.g., TV has a greater depth than mobile or desktop).\n\n"

        "Responsive elevation and dynamic elevation offsets.\n\n"

        "Some component types have responsive elevation, meaning they change elevation in response "
        "to user input (e.g., normal, focused, and pressed) or system events. These elevation "
        "changes are consistently implemented using dynamic elevation offsets.\n"
        "Dynamic elevation offsets are the goal elevation that a component moves towards, relative "
        "to the component’s resting state. They ensure that elevation changes are consistent "
        "across actions and component types. For example, all components that lift on press have "
        "the same elevation change relative to their resting elevation.\n"
        "Once the input event is completed or cancelled, the component will return to its resting "
        "elevation.\n\n"

        "Avoiding elevation interference.\n\n"

        "Components with responsive elevations may encounter other components as they move between "
        "their resting elevations and dynamic elevation offsets. Because material cannot pass "
        "through other material, components avoid interfering with one another any number of ways, "
        "whether on a per component basis or using the entire app layout.\n"
        "On a component level, components can move or be removed before they cause interference. "
        "For example, a floating action button (FAB) can disappear or move off screen before a "
        "user picks up a card, or it can move if a snackbar appears.\n"
        "On the layout level, design your app layout to minimize opportunities for interference. "
        "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
        "when a user tries to pick up one of cards.\n\n"
    </string>
    <string name="action_settings">Settings</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="title_activity_view_opportunities">ViewOpportunities</string>
    <string name="txtCompanyProfilePic">Company Profile Picture</string>
    <string name="txtEditPic">Edit Picture</string>
    <string name="upload_photo">Upload Photo</string>
    <string name="txtCompanyField">Field</string>
    <string name="txtViewOpportunities">View Opportunities</string>
    <string name="txtDeleteButton">Delete Button</string>
    <string name="new_conversation_dialog_title">Start a Conversation</string>
    <string name="cancel">Cancel</string>
    <string name="confirm">Confirm</string>
    <string name="strWith">Who is it with? (Optional)</string>
    <string name="strDescription">Description</string>
    <string name="strAdd">Add</string>
    <string name="strAddOpportunity">Add Opportunity</string>
    <string name="strApprove">Approve</string>
    <string name="strOpportunities">Opportunities</string>
    <string name="conversation_delete_button_description">Button to delete a conversation</string>
    <string name="strConfirmDelete">Confirm Delete</string>
    <string name="strConfirm">Confirm</string>
    <string name="strCancel">Cancel</string>
    <string name="strViewEmployees">View Employees</string>
    <string name="strMakeAdmin">Make Admin</string>
    <string name="strRevokeAdmin">Revoke Admin</string>
    <string name="filter">Type to filter</string>
    <string name="strCity">City</string>
    <string name="strState">State:</string>
    <string name="strRequirementsHint">Requirements (Optional)</string>
    <string name="strKeywordsHint">Keywords (Optional: Separated By Commas)</string>
    <string name="strKeywordsHint2">Keywords (Separated By Commas)</string>
    <string name="strAddKeywords">Add Keywords</string>
    <string name="share_something">Share something</string>
    <string name="subject">Subject</string>
    <string name="what_are_you_talking_about">What are you talking about?</string>
    <string name="add_a_subject">Add a subject</string>
    <string name="say_some_more">Say some more...</string>
    <string name="share">Share</string>
</resources>