<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/share"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:background="@color/colorPrimary"
        android:textColor="#fff"
        android:textSize="20sp"
        android:onClick="createShare"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/share_something"
            android:textSize="36sp"
            android:textColor="@color/colorPrimary"
            android:textStyle="bold"
            android:layout_gravity="start"
            android:layout_marginBottom="20dp"/>

        <TextView
            android:id="@+id/subject_header"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/subject"
            android:textSize="20sp"
            android:textColor="@color/colorPrimary"
            android:textStyle="bold" />

        <View
            android:id="@+id/divider1"
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="@color/colorPrimary" />

        <EditText
            android:id="@+id/subject"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/add_a_subject"
            android:autofillHints="Add a subject"
            android:inputType="text"
            android:background="#f1f3f4"
            android:layout_marginBottom="5dp"/>

        <View
            android:id="@+id/divider2"
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="@color/colorPrimary" />

        <EditText
            android:id="@+id/message"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/say_some_more"
            android:autofillHints="@string/what_are_you_talking_about"
            android:inputType="textMultiLine"
            android:lines="4"
            android:gravity="top|left"
            android:background="#f1f3f4" />



    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>