<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CompanyRegistration">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:layout_editor_absoluteX="83dp"
        tools:layout_editor_absoluteY="184dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <EditText
                android:id="@+id/companyName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="99dp"
                android:layout_marginTop="25dp"
                android:layout_marginRight="99dp"
                android:ems="10"
                android:hint="@string/strCompanyName"
                android:inputType="textPersonName"
                android:importantForAutofill="no" />

            <EditText
                android:id="@+id/companyEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="99dp"
                android:layout_marginTop="25dp"
                android:layout_marginRight="99dp"
                android:ems="10"
                android:hint="@string/strCompanyEmail"
                android:inputType="textEmailAddress"
                android:importantForAutofill="no" />

            <EditText
                android:id="@+id/companyPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="99dp"
                android:layout_marginTop="25dp"
                android:layout_marginRight="99dp"
                android:ems="10"
                android:hint="@string/strPassword"
                android:inputType="textPassword"
                android:importantForAutofill="no" />

            <EditText
                android:id="@+id/companyReEnterPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="99dp"
                android:layout_marginTop="25dp"
                android:layout_marginRight="99dp"
                android:ems="10"
                android:hint="@string/strReEnterPassword"
                android:inputType="textPassword"
                android:importantForAutofill="no" />

            <EditText
                android:id="@+id/companyField"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="99dp"
                android:layout_marginTop="25dp"
                android:layout_marginRight="99dp"
                android:ems="10"
                android:hint="@string/strFieldOfBusiness"
                android:inputType="textPersonName"
                android:importantForAutofill="no" />

            <EditText
                android:id="@+id/companyDescription"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="99dp"
                android:layout_marginTop="25dp"
                android:layout_marginRight="99dp"
                android:ems="10"
                android:hint="@string/strCompanyDescription"
                android:inputType="textPersonName"
                android:importantForAutofill="no" />

            <Button
                android:id="@+id/btnRegister"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="135dp"
                android:layout_marginTop="35dp"
                android:layout_marginRight="135dp"
                android:onClick="register"
                android:text="@string/strRegister" />

        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>